# ait

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: ait.manifest  ait.rc
docs/: ROADMAP.md
docs/adr/: 0001-no-ocr.md  template.md
docs/issues/: 2026-06-16-mvp-validation.md
docs/manual-test-checklists/: windows-mvp.md
docs/plans/: 2026-06-23-openai-compatible-translation-prompt.md  2026-07-17-ui-component-system.md
docs/research/: open-source-shortcuts-and-text-capture.md
docs/specs/: 2026-06-23-openai-compatible-translation-prompt-design.md
docs/superpowers/plans/: 2026-06-15-selection-translation-implementation.md  2026-06-16-text-capture-fix-implementation.md  2026-06-16-translation-window-actions.md  2026-06-18-settings-and-translation-ui-fixes.md  2026-06-19-automated-github-release.md  (+9 more)
installer/: ait.iss
src/: app.rs  capture.rs  command.rs  config.rs  diagnostics.rs  error.rs  hotkey.rs  lib.rs  logging.rs  main.rs  secret.rs  startup.rs  update.rs
src/translator/: google_free.rs  mod.rs  openai_compatible.rs
src/ui/: button.rs  checkbox.rs  combo.rs  edit.rs  font.rs  icon.rs  listbox.rs  mod.rs  settings_window.rs  theme.rs  translate_window.rs  tray.rs
tests/: capture_tests.rs  config_tests.rs  diagnostics_tests.rs  hotkey_tests.rs  iss_script_tests.rs  logging_tests.rs  release_tests.rs  secret_tests.rs  settings_window_tests.rs  startup_tests.rs  translator_google_tests.rs  translator_openai_tests.rs  update_tests.rs  windows_subsystem_tests.rs  workflow_tests.rs
(+17 files in other folders)
